// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTweetHandler response w/ error 1`] = `
Object {
  "env": "test",
  "error": [Error: Oh Noes!],
  "message": "Oh Noes!",
  "name": "tweries-api",
  "timestamp": Any<Number>,
  "tweetUrl": "https://twitter.com/trisweb/status/1200501818461212672",
  "userId": "twitter|1183836409850814464",
  "version": "0.10.0",
}
`;

exports[`useTweetHandler response w/o error 1`] = `
Object {
  "env": "test",
  "error": undefined,
  "message": "✅",
  "name": "tweries-api",
  "timestamp": Any<Number>,
  "tweetUrl": "https://twitter.com/trisweb/status/1200501818461212672",
  "userId": "twitter|1183836409850814464",
  "version": "0.10.0",
}
`;
